[package]
name = "tablet"
version = "0.27.0"
description = "Rust bindings for Metal"
documentation = "https://docs.rs/crate/metal"
homepage = "https://github.com/gfx-rs/metal-rs"
repository = "https://github.com/gfx-rs/metal-rs"
authors = ["gfx-rs developers"]
readme = "README.md"
keywords = ["metal", "graphics", "bindings"]
license = "MIT OR Apache-2.0"
edition = "2021"
exclude = ["guide/**/*", "examples/texture/**/*", "tests/**/*", "Cargo.lock", "target/**/*"]

[package.metadata.docs.rs]
default-target = "x86_64-apple-darwin"

[features]
default = ["link"]
private = []
mps = []
link = ["core-graphics-types/link"]

[dependencies]
core-graphics-types = "0.1.3"
bitflags = "2"
log = "0.4"
block = "0.1.6"
foreign-types = "0.5"
dispatch = { version = "0.2", optional = true }
paste = "1"
cocoa = "0.24.0"
cty = "0.2.1"
winit = "0.27"
sema = "0.1.4"
png = "0.17"
glam = "0.22"
rand = "0.8"
metal = "0.27.0"

[dependencies.objc]
version = "0.2.4"
