[package]
name = "tablet"
version = "0.1.3"
authors = ["Kirill Chibisov <contact@kchibisov.com>"]
description = "Examples for glutin"
repository = "https://github.com/rust-windowing/glutin"
license = "Apache-2.0"
readme = "../README.md"
rust-version = "1.65.0"
edition = "2021"
publish = false

[dependencies]
glutin = "0.31.3"
glutin-winit = "0.4.2"
raw-window-handle = "0.5"
winit = { version = "0.29.14", default-features = false, features = ["rwh_05"] }
